--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -1,1 +1,53 @@
-<p>projects-data works!</p>
+<div class="cdk-virtual-scroll-data-source-example">
+    <cdk-virtual-scroll-viewport orientation="horizontal" itemSize="50" class="example-viewport">
+        <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/foodLogger.png"
+            />
+            <p>Food Logger</p>
+            <p>{{foodDesc}}</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(1) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my sudoku page" href="https://github.com/chrisnmendoza/Sudoku_Solver" title="sudoku page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/mudkipFox.png"/>
+            <p>testing2</p>
+            <p>{{sudokuDesc}}</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(2) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my calculator page" href="https://github.com/chrisnmendoza/Calculator" title="calculator page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/diagram_hd.png"/>
+            <p>testing2</p>
+            <p>{{thirdDesc}}</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/foodLogger.png"
+            />
+            <p>Food Logger</p>
+            <p>{{foodDesc}}</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(1) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my sudoku page" href="https://github.com/chrisnmendoza/Sudoku_Solver" title="sudoku page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/mudkipFox.png"/>
+            <p>testing2</p>
+            <p>{{sudokuDesc}}</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(2) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my calculator page" href="https://github.com/chrisnmendoza/Calculator" title="calculator page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="../../assets/img/diagram_hd.png"/>
+            <p>testing2</p>
+            <p>{{thirdDesc}}</p>
+        </a>
+    </cdk-virtual-scroll-viewport>
+  </div>
+  
+  
+  <!-- Copyright 2021 Google LLC. All Rights Reserved.
+      Use of this source code is governed by an MIT-style license that
+      can be found in the LICENSE file at http://angular.io/license -->
