--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -12,14 +12,14 @@
             <img
             alt="test"
             src="../../assets/img/mudkipFox.png"/>
-            <p>testing2</p>
+            <p>Sudoku Solver</p>
             <p>{{sudokuDesc}}</p>
         </a>
         <a (mouseenter) ="mouseEnter(2) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my calculator page" href="https://github.com/chrisnmendoza/Calculator" title="calculator page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
             src="../../assets/img/diagram_hd.png"/>
-            <p>testing2</p>
+            <p>Calculator</p>
             <p>{{thirdDesc}}</p>
         </a>
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
