--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -1,5 +1,5 @@
-<div class="cdk-virtual-scroll-data-source-example">
-    <cdk-virtual-scroll-viewport orientation="horizontal" itemSize="50" class="example-viewport">
+<div class="cdk-virtual-scroll-data-source-example" id="scroll">
+    <cdk-virtual-scroll-viewport orientation="horizontal" itemSize="50" class="example-viewport" id="scroll2">
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
