added more to projects page

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,3 +10,11 @@
 
 <app-projects-data>
 </app-projects-data>
+
+<div class="spacer"></div>
+
+<div class="others">
+    <h2>Some other projects that aren't on my Github include:</h2>
+    <h3>A covert channel set up through a programmable LED light bulb and an I2C Light Sensor</h3>
+    <h3>An RF communications channel using the Basys MX3 PIC32 MCU Board</h3>
+</div>
