finished projects page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <a class="nav-item nav-link" routerLink="/">Home</a>
   <a class="nav-item nav-link" routerLink="/about">About</a>
   <a class="nav-item nav-link" routerLink="/projects">Projects</a>
+  <a class="nav-item nav-link" routerLink="/experience">Experience</a>
 </div>
 
 <!-- main content container -->
