--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,4 +14,8 @@
       <mat-icon>contact_support</mat-icon>
       <span>About</span>
     </button>
+    <button mat-menu-item routerLink="/experience">
+      <mat-icon>work</mat-icon>
+      <span>Experience</span>
+    </button>
   </mat-menu>
