--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -4,7 +4,6 @@
 <h2>Below are some of my projects that you can find on my <a class="blueLink" href="https://github.com/chrisnmendoza/">Github</a>.</h2>
 <h2>Clicking on them will take you to the respective project's repository</h2>
 
-
 <div class="spacer"></div>
 
 
@@ -12,9 +11,14 @@
 </app-projects-data>
 
 <div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
 
+<!--
 <div class="others">
     <h2>Some other projects that aren't on my Github include:</h2>
     <h3>A covert channel set up through a programmable LED light bulb and an I2C Light Sensor</h3>
     <h3>An RF communications channel using the Basys MX3 PIC32 MCU Board</h3>
 </div>
+-->
+
