--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,6 +13,9 @@
 <div class="spacer"></div>
 <div class="spacer"></div>
 <div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
 
 <!--
 <div class="others">
