finished experience page

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,9 +1,12 @@
 <app-header></app-header>
 
-<h1>Fortnite Battle Royale</h1>
+<h1>Work Experience</h1>
 
+<h2>Below is a timeline of all the jobs I've had either through school or internships</h2>
+<h2>For a more in-depth look at my work experience, please check out my <a class="blueLink" href="../../assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">resume</a>.</h2>
 
-  <div class="kipper">
-    <app-mudkip></app-mudkip>
-    <app-messages></app-messages>
-  </div>
+<div class="spacer"></div>
+
+<app-timeline>
+
+</app-timeline>>
