--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,73 @@
 <app-header></app-header>
 
-<h1>Fortnite Battle Royale</h1>
+<h1>Christopher-Neil Mendoza</h1>
+<div class="spacer"></div>
 
-
-  <div class="kipper">
-    <app-mudkip></app-mudkip>
-    <app-messages></app-messages>
+<div class="content">
+  <div class="itemLeft">
+    <h2>Hello!</h2>
+    <div class="spacer"></div>
+    <p>{{ bio }}</p>
+    <div class="spacer">      
+    </div>
+    <div class="link">
+      <button mat-menu-item routerLink="/projects">
+        <mat-icon>code</mat-icon>
+        <span>Projects</span>
+      </button>
+    </div>
+    <div class="link">
+      <button mat-menu-item routerLink="/about">
+        <mat-icon>contact_support</mat-icon>
+        <span>About</span>
+      </button>
+    </div>
+    <div class="link">
+      <button mat-menu-item routerLink="/experience">
+        <mat-icon>work</mat-icon>
+        <span>Experience</span>
+      </button>
+    </div>
   </div>
+  <div class="itemRight">
+    <img src="../../assets/img/Me.jpg" alt="M&T Bank">
+  </div>
+</div>
+
+<div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
+<div class="spacer"></div>
+
+<div class="content2">
+  <h2>Check out my <a class="blueLink" href="../../assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="contact">
+    <strong>Contact Info: </strong>
+  </div>
+  <div class="spacer"></div>
+  <div class="contact">
+    <strong>Email: </strong>
+    <a href = "mailto: christopherqmendoza@gmail.com">christopherqmendoza@gmail.com</a>
+  </div>
+  <div class="spacer"></div>
+  <div class="contact">
+    <strong>Phone Number: (631) 384-6027</strong>
+  </div>
+
+  
+</div>
