--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
   padding: 30px;
+  background-color: rgb(226, 231, 241);
 }
 
 .version-info {
