--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -7,6 +7,10 @@
 
 </div>
 
+<div class="surroundings">
+    
+</div>
+
 <div class="cdk-virtual-scroll-data-source-example" id="scroll">
     <cdk-virtual-scroll-viewport orientation="horizontal" itemSize="50" class="example-viewport" id="scroll2">
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my vaccine record tracker page" href="https://github.com/chrisnmendoza/Ethereum_AppDevChallenge" title="Vaccine Record Tracker Page" target="_blank" rel="noreferrer noopener">
