Finished about page

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -3,7 +3,7 @@
 <h1>Work Experience</h1>
 
 <h2>Below is a timeline of all the jobs I've had either through school or internships</h2>
-<h2>For a more in-depth look at my work experience, please check out my <a class="blueLink" href="../../assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">resume</a>.</h2>
+<h2>For a more in-depth look at my work experience, please check out my <a class="blueLink" href="../../assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">resume</a></h2>
 
 <div class="spacer"></div>
 
