--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,11 @@
 <app-header></app-header>
+
+<h1>About Me</h1>
+<div class="spacer"></div>
+<div class="content">
+    <h3>I was interested in technology from a young age, as a kid I would browse the internet while my parents were at work. In hindsight, I probably needed more supervision.</h3>
+    <h3> {{description}} </h3>
+    <h3>Something I'm trying to improve on is my sleep schedule, I'm a real night owl sometimes</h3>
+    <h3>I'm always willing to learn, improvement is my biggest motivation. I want to always be better than the person I was yesterday</h3>
+</div>
+<img src="../../assets/img/dog.jpg" alt="M&T Bank">
