--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <h1>Projects</h1>
-<h2>Below are some of my projects that you can find on my <a class="blueLink" href="https://github.com/chrisnmendoza/">Github</a>.</h2>
+<h2>Below are some of my projects that you can find on my <a class="blueLink" href="https://github.com/chrisnmendoza/">Github</a></h2>
 <h2>Clicking on them will take you to the respective project's repository</h2>
 
 <div class="spacer"></div>
