--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,4 +8,4 @@
     <h3>Something I'm trying to improve on is my sleep schedule, I'm a real night owl sometimes</h3>
     <h3>I'm always willing to learn, improvement is my biggest motivation. I want to always be better than the person I was yesterday</h3>
 </div>
-<img src="../../assets/img/dog.jpg" alt="M&T Bank">
+<img src="./assets/img/dog.jpg" alt="M&T Bank">
