--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="itemRight">
-    <img src="../../assets/img/Me.jpg" alt="M&T Bank">
+    <img src="./assets/img/Me.jpg" alt="M&T Bank">
   </div>
 </div>
 
@@ -41,7 +41,7 @@
 <div class="spacer"></div>
 
 <div class="content2">
-  <h2>Check out my <a class="blueLink" href="../../assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
+  <h2>Check out my <a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
   <div class="spacer"></div>
   <div class="spacer"></div>
   <div class="spacer"></div>
