--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -16,39 +16,39 @@
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my vaccine record tracker page" href="https://github.com/chrisnmendoza/Ethereum_AppDevChallenge" title="Vaccine Record Tracker Page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/vaccine.PNG"
+            src="./assets/img/vaccine.PNG"
             />
             <p>Vaccine Record Tracker</p>
         </a>
         <a (mouseenter) ="mouseEnter(1) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/foodLogger.png"
+            src="./assets/img/foodLogger.png"
             />
             <p>Food Logger</p>
         </a>
         <a (mouseenter) ="mouseEnter(2) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my Racing Robots page" href="https://github.com/chrisnmendoza/racingRobots" title="racing robots page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/robots.png"/>
+            src="./assets/img/robots.png"/>
             <p>Racing Robots</p>
         </a>
         <a (mouseenter) ="mouseEnter(3) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my sudoku page" href="https://github.com/chrisnmendoza/Sudoku_Solver" title="sudoku page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/sudokuScreenshot.PNG"/>
+            src="assets/img/sudokuScreenshot.PNG"/>
             <p>Sudoku Solver</p>
         </a>
         <a (mouseenter) ="mouseEnter(4) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my calculator page" href="https://github.com/chrisnmendoza/Calculator" title="calculator page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/diagram_hd.png"/>
+            src="assets/img/diagram_hd.png"/>
             <p>Calculator</p>
         </a>
         <a (mouseenter) ="mouseEnter(5) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my website page" href="https://github.com/chrisnmendoza/website" title="website page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
-            src="../../assets/img/website.PNG"/>
+            src="assets/img/website.PNG"/>
             <p>My Website</p>
         </a>
     </cdk-virtual-scroll-viewport>
