--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -3,7 +3,7 @@
       <div class="content">
         <h2>Jun 2021 - Aug 2021</h2>
         <h4>Technology Intern: M&T Bank</h4>
-        <img src="../../assets/img/m&t.jpg" alt="M&T Bank">
+        <img src="./assets/img/m&t.jpg" alt="M&T Bank">
         <p><span style="font-weight:bold">Skills Used:</span> Agile Methodology, C#, Angular, Solidity, Ethereum Blockchain Development</p>
       </div>
     </div>
@@ -11,7 +11,7 @@
         <div class="content">
             <h2>Feb 2021 - May 2021</h2>
             <h4>Teaching Assistant: UD</h4>
-            <img src="../../assets/img/ud.png" alt="ud">
+            <img src="assets/img/ud.png" alt="ud">
             <p><span style="font-weight:bold">Skills Used:</span> Java, JavaFX, Maven</p>
         </div>
     </div>
@@ -19,7 +19,7 @@
         <div class="content">
           <h2>Sept 2020 - Dec 2020</h2>
           <h4>Supplemental Instructor/Grader: UD</h4>
-          <img src="../../assets/img/ud.png" alt="ud">
+          <img src="./assets/img/ud.png" alt="ud">
           <p><span style="font-weight:bold">Skills Used:</span> C, PIC32MX Microprocessors, MPLAB IDE</p>
         </div>
     </div>
@@ -27,7 +27,7 @@
         <div class="content">
             <h2>Jul 2020 - Aug 2020</h2>
             <h4>Process Safety Intern: National Grid</h4>
-            <img src="../../assets/img/nationalGrid.png" alt="national grid">
+            <img src="assets/img/nationalGrid.png" alt="national grid">
             <p><span style="font-weight:bold">Skills Used:</span> Tableau, Excel (Pivot Tables)</p>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="content">
           <h2>Feb 2020 - May 2020</h2>
           <h4>Supplemental Instructor: UD</h4>
-          <img src="../../assets/img/ud.png" alt="ud">
+          <img src="./assets/img/ud.png" alt="ud">
           <p><span style="font-weight:bold">Skills Used:</span> VHDL, Vivado, VMWare Workstation</p>
         </div>
     </div>
@@ -43,7 +43,7 @@
         <div class="content">
             <h2>Jun 2019 - Aug 2019</h2>
             <h4>Construction Inspector: NYS DOT</h4>
-            <img src="../../assets/img/dot.png" alt="nysdot">
+            <img src="assets/img/dot.png" alt="nysdot">
             <p><span style="font-weight:bold">Skills Used:</span> Excel, Daily Work Reports</p>
         </div>
     </div>
