fixed about page, added hover features for experience page

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,7 +1,6 @@
 img {
-    height: 30%;
-    width: 30%;
-    padding: 80px;
+    height: 65%;
+    width: 65%;
 }
 
 .content {
@@ -11,6 +10,17 @@ img {
     min-width: 600px;
     background-color: #e7e982;
     padding: 20px;
+    border-radius: 25px;
+    height: 100%;
+    line-height: 50px;
+}
+
+.content2 {
+    margin: auto;
+    width: 80%;
+    max-width: 1000px;
+    min-width: 600px;
+    padding: 40px;
     border-radius: 25px;
     height: 100%;
     line-height: 50px;
