--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -13,12 +13,30 @@
 
 <div class="cdk-virtual-scroll-data-source-example" id="scroll">
     <cdk-virtual-scroll-viewport orientation="horizontal" itemSize="50" class="example-viewport" id="scroll2">
+        <a (mouseenter) ="mouseEnter(6) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my messenging app page" href="https://github.com/chrisnmendoza/chrisCord" title="chrisCord Page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="assets/img/chrisCord.PNG"/>
+            <p>ChrisCord Messaging</p>
+        </a>
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my vaccine record tracker page" href="https://github.com/chrisnmendoza/Ethereum_AppDevChallenge" title="Vaccine Record Tracker Page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
             src="./assets/img/vaccine.PNG"
             />
             <p>Vaccine Record Tracker</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(7) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my chrisRip classifier page" href="https://github.com/chrisnmendoza/ChrisRip" title="chrisRip page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="assets/img/chrisRip.PNG"/>
+            <p>Rule Based Learning Algorithm</p>
+        </a>
+        <a (mouseenter) ="mouseEnter(5) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my website page" href="https://github.com/chrisnmendoza/website" title="website page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="assets/img/website.PNG"/>
+            <p>My Website</p>
         </a>
         <a (mouseenter) ="mouseEnter(1) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my foodLogger page" href="https://github.com/chrisnmendoza/FoodLogger" title="foodLogger page" target="_blank" rel="noreferrer noopener">
             <img
@@ -44,12 +62,6 @@
             alt="test"
             src="assets/img/diagram_hd.png"/>
             <p>Calculator</p>
-        </a>
-        <a (mouseenter) ="mouseEnter(5) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my website page" href="https://github.com/chrisnmendoza/website" title="website page" target="_blank" rel="noreferrer noopener">
-            <img
-            alt="test"
-            src="assets/img/website.PNG"/>
-            <p>My Website</p>
         </a>
     </cdk-virtual-scroll-viewport>
   </div>
