--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -30,7 +30,7 @@
             <img
             alt="test"
             src="assets/img/chrisRip.PNG"/>
-            <p>Rule Based Learning Algorithm</p>
+            <p>Rule Based ML Algorithm</p>
         </a>
         <a (mouseenter) ="mouseEnter(5) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my website page" href="https://github.com/chrisnmendoza/website" title="website page" target="_blank" rel="noreferrer noopener">
             <img
