--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -23,7 +23,7 @@
             <img
             alt="test"
             src="assets/img/case.png"/>
-            <p>Code Assistant Search Engine (CASE)</p>
+            <p>Code Assistant Search Engine</p>
         </a>
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my vaccine record tracker page" href="https://github.com/chrisnmendoza/Ethereum_AppDevChallenge" title="Vaccine Record Tracker Page" target="_blank" rel="noreferrer noopener">
             <img
