--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -19,7 +19,7 @@
             src="assets/img/chrisCord.PNG"/>
             <p>ChrisCord Messaging</p>
         </a>
-        <a (mouseenter) ="mouseEnter(8) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="code assistant search engine (CASE)" href="http://loadbalancercase-1656487139.us-east-1.elb.amazonaws.com/query/?&query=how%20to%20reverse%20a%20linked%20list&languages=java%20&onlyCode=yes" title="CASE Page" target="_blank" rel="noreferrer noopener">
+        <a (mouseenter) ="mouseEnter(8) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="code assistant search engine" href="http://loadbalancercase-1656487139.us-east-1.elb.amazonaws.com/query/?&query=how%20to%20reverse%20a%20linked%20list&languages=java%20&onlyCode=yes" title="CASE Page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
             src="assets/img/case.png"/>
