--- a/src/app/projects-data/projects-data.component.html
+++ b/src/app/projects-data/projects-data.component.html
@@ -25,6 +25,12 @@
             src="assets/img/case.png"/>
             <p>Code Assistant Search Engine</p>
         </a>
+        <a (mouseenter) ="mouseEnter(9) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="malware analysis tool" href="https://github.com/theRealestAEP/SeniorDesign" title="MAT Page" target="_blank" rel="noreferrer noopener">
+            <img
+            alt="test"
+            src="assets/img/mat.png"/>
+            <p>Malware Analysis Tool</p>
+        </a>
         <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" class="infoBox" aria-label="my vaccine record tracker page" href="https://github.com/chrisnmendoza/Ethereum_AppDevChallenge" title="Vaccine Record Tracker Page" target="_blank" rel="noreferrer noopener">
             <img
             alt="test"
