--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,5 +1,25 @@
 <div class="timeline">
     <div class="container left">
+        <a (mouseenter) ="mouseEnter(6) "  (mouseleave) ="mouseLeave()">
+            <div class="content">
+                <h2>Jun 2022 - Aug 2022</h2>
+                <h4>Software Development Engineer Intern: AWS</h4>
+                <img src="./assets/img/aws.png" alt="aws">
+                <p><span style="font-weight:bold">{{ description[6] }}</span> {{ list[6] }}</p>
+            </div>
+        </a>
+    </div>
+    <div class="container right">
+        <a (mouseenter) ="mouseEnter(7) "  (mouseleave) ="mouseLeave()">
+            <div class="content">
+                <h2>Jan 2022 - Feb 2022</h2>
+                <h4>Software Developer Intern: Berkley Technology Services</h4>
+                <img src="assets/img/wrberkley.png" alt="wr berkley">
+                <p><span style="font-weight:bold">{{ description[7] }}</span> {{ list[7] }}</p>
+            </div>
+        </a>
+    </div>
+    <div class="container left">
       <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()">
         <div class="content">
             <h2>Jun 2021 - Aug 2021</h2>
