fixed link to featured project

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
     </a>
     <h3><a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Code Assistant Search Engine</a></h3>
   </div>
-  <h2>Check out my <a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
+  <h2>Check out my <a class="blueLink" href="https://codeassistantsearchengine.link/query/?&query=how%20to%20reverse%20a%20linked%20list&languages=java%20&onlyCode=yes" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
   <div class="contact">
     <strong>Contact Info: </strong>
   </div>
