updated to include post grad

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="itemRight">
-    <img src="./assets/img/Me.jpg" alt="M&T Bank">
+    <img src="./assets/img/Me.jpg" alt="A picture of me">
   </div>
 </div>
 
