--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,15 +1,25 @@
 <div class="timeline">
     <div class="container left">
+        <a (mouseenter) ="mouseEnter(8) "  (mouseleave) ="mouseLeave()">
+            <div class="content">
+                <h2>March 2023 - Present</h2>
+                <h4>Software Development Engineer: AWS</h4>
+                <img src="./assets/img/aws.png" alt="aws">
+                <p><span style="font-weight:bold">{{ description[8] }}</span> {{ list[8] }}</p>
+            </div>
+        </a>
+    </div>
+    <div class="container right">
         <a (mouseenter) ="mouseEnter(6) "  (mouseleave) ="mouseLeave()">
             <div class="content">
-                <h2>Jun 2022 - Aug 2022</h2>
+                <h2>June 2022 - Aug 2022</h2>
                 <h4>Software Development Engineer Intern: AWS</h4>
                 <img src="./assets/img/aws.png" alt="aws">
                 <p><span style="font-weight:bold">{{ description[6] }}</span> {{ list[6] }}</p>
             </div>
         </a>
     </div>
-    <div class="container right">
+    <div class="container left">
         <a (mouseenter) ="mouseEnter(7) "  (mouseleave) ="mouseLeave()">
             <div class="content">
                 <h2>Jan 2022 - Feb 2022</h2>
@@ -19,17 +29,17 @@
             </div>
         </a>
     </div>
-    <div class="container left">
+    <div class="container right">
       <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()">
         <div class="content">
-            <h2>Jun 2021 - Aug 2021</h2>
+            <h2>June 2021 - Aug 2021</h2>
             <h4>Technology Intern: M&T Bank</h4>
             <img src="./assets/img/m&t.jpg" alt="M&T Bank">
             <p><span style="font-weight:bold">{{ description[0] }}</span> {{ list[0] }}</p>
         </div>
       </a>
     </div>
-    <div class="container right">
+    <div class="container left">
         <a (mouseenter) ="mouseEnter(1) "  (mouseleave) ="mouseLeave()">
             <div class="content">
                 <h2>Feb 2021 - May 2021</h2>
@@ -39,7 +49,7 @@
             </div>
         </a>
     </div>
-    <div class="container left">
+    <div class="container right">
         <a (mouseenter) ="mouseEnter(2) "  (mouseleave) ="mouseLeave()">
             <div class="content">
                 <h2>Sept 2020 - Dec 2020</h2>
@@ -49,17 +59,17 @@
             </div>
         </a>
     </div>
-    <div class="container right">
+    <div class="container left">
         <a (mouseenter) ="mouseEnter(3) "  (mouseleave) ="mouseLeave()">
             <div class="content">
-                <h2>Jul 2020 - Aug 2020</h2>
+                <h2>July 2020 - Aug 2020</h2>
                 <h4>Process Safety Intern: National Grid</h4>
                 <img src="assets/img/nationalGrid.png" alt="national grid">
                 <p><span style="font-weight:bold">{{ description[3] }}</span> {{ list[3] }}</p>
             </div>
         </a>
     </div>
-    <div class="container left">
+    <div class="container right">
         <a (mouseenter) ="mouseEnter(4) "  (mouseleave) ="mouseLeave()">
             <div class="content">
             <h2>Feb 2020 - May 2020</h2>
@@ -69,10 +79,10 @@
             </div>
         </a>
     </div>
-    <div class="container right">
+    <div class="container left">
         <a (mouseenter) ="mouseEnter(5) "  (mouseleave) ="mouseLeave()">
             <div class="content">
-                <h2>Jun 2019 - Aug 2019</h2>
+                <h2>June 2019 - Aug 2019</h2>
                 <h4>Construction Inspector: NYS DOT</h4>
                 <img src="assets/img/dot.png" alt="nysdot">
                 <p><span style="font-weight:bold">{{ description[5] }}</span> {{ list[5] }}</p>
