--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -2,8 +2,8 @@
 
 <h1>Work Experience</h1>
 
-<h2>Below is a timeline of all the jobs I've had either through school or internships</h2>
-<h2>For a more in-depth look at my work experience, please check out my <a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">resume</a></h2>
+<h2>Below is a timeline of all the jobs I've had through school, internships, and full-time</h2>
+<h2>For a more in-depth look at my most recent work experiences, please check out my <a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">resume</a></h2>
 
 <div class="spacer"></div>
 
