--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,12 +43,12 @@
 <div class="content2">
   <h2>Featured Project</h2>
   <div class="infoBox">
-    <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" aria-label="code assistant search engine" href="https://codeassistantsearchengine.link/query/?&query=how%20to%20reverse%20a%20linked%20list&languages=java%20&onlyCode=yes" title="CASE Page" target="_blank" rel="noreferrer noopener">
+    <a (mouseenter) ="mouseEnter(0) "  (mouseleave) ="mouseLeave()" aria-label="code assistant search engine" href="http://ec2-54-234-142-176.compute-1.amazonaws.com:3000/" title="CASE Page" target="_blank" rel="noreferrer noopener">
       <img class="mini"
       alt="case"
       [src]="image" (mouseover)="onMouseOver()" (mouseout)="onMouseOut()"/>
     </a>
-    <h3><a class="blueLink" href="https://codeassistantsearchengine.link/query/?&query=how%20to%20reverse%20a%20linked%20list&languages=java%20&onlyCode=yes" target="_blank" rel="noreferrer noopener">Code Assistant Search Engine</a></h3>
+    <h3><a class="blueLink" href="http://ec2-54-234-142-176.compute-1.amazonaws.com:3000/" target="_blank" rel="noreferrer noopener">Code Assistant Search Engine</a></h3>
   </div>
   <h2>Check out my <a class="blueLink" href="./assets/MendozaChristopher-Neil_Resume.pdf" target="_blank" rel="noreferrer noopener">Resume</a>, <a class="blueLink" href="https://www.linkedin.com/in/christopherneilmendoza/" target="_blank" rel="noreferrer noopener">Linkedin</a>, and <a class="blueLink" href="https://github.com/chrisnmendoza/" target="_blank" rel="noreferrer noopener">Github</a>!</h2>
   <div class="contact">
